# resume

./: .gitignore  Main.hs  README.md  Resume.hs  resume.cabal  update.cmd  update.sh
.github/workflows/: release.yml
latex/: Makefile
