cabal-version:       >=1.10
name:                resume
version:             2022
author:              iamazy
maintainer:          iamazy.me@outlook.com
build-type:          Simple
extra-source-files:  README.md

executable resume-gen
  main-is:          Main.hs
  other-modules:    TeX, Resume
  build-depends:    base >=4.13, mtl >=2.0
  hs-source-dirs:   .
  default-language: Haskell2010
